--- a/Pear-Admin-Flask/pyproject.toml
+++ b/Pear-Admin-Flask/pyproject.toml
@@ -15,6 +15,7 @@ flask-migrate = "^4.0.5"
 flask-apscheduler = "^1.13.1"
 requests = "^2.32.3"
 loguru = "^0.7.2"
+gunicorn = "^22.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
